--- a/myApp/src/pages/page1/page1.scss
+++ b/myApp/src/pages/page1/page1.scss
@@ -1,3 +1,54 @@
 page-page1 {
 
+
+  .tutorial-page {
+
+    .toolbar-background {
+      background: #fff;
+      border-color: transparent;
+    }
+
+    .slide-zoom {
+      height: 100%;
+    }
+
+    .slide-title {
+      margin-top: 2.8rem;
+    }
+
+    .slide-image {
+      max-height: 50%;
+      max-width: 60%;
+      margin: 18px 0;
+      padding : 1px;
+    }
+    //margin:5px 삽입
+    .slide-padding{
+      padding:5px;
+      margin:5px;
+      font-size: 2em;
+    }
+
+    b {
+      font-weight: 500;
+    }
+
+    p {
+      padding: 0 40px;
+      font-size: 14px;
+      line-height: 1.5;
+      color: #60646B;
+
+      b {
+        color: #000000;
+        margin:5px;
+      }
+    }
+
+  }
+
+
 }
+
+
+
