--- a/myApp/src/pages/page5/page5.scss
+++ b/myApp/src/pages/page5/page5.scss
@@ -1,38 +1,44 @@
+page-page5 {
 
-.tutorial-page {
+  .tutorial-page {
 
-  .toolbar-background {
-    background: #fff;
-    border-color: transparent;
-  }
+    .toolbar-background {
+      background: #fff;
+      border-color: transparent;
+    }
 
-  .slide-zoom {
-    height: 100%;
-  }
+    .slide-zoom {
+      height: 100%;
+    }
 
-  .slide-title {
-    margin-top: 2.8rem;
-  }
+    .slide-title {
+      margin-top: 2.8rem;
+    }
 
-  .slide-image {
-    max-height: 50%;
-    max-width: 60%;
-    margin: 18px 0;
-  }
-
-  b {
-    font-weight: 500;
-  }
-
-  p {
-    padding: 0 40px;
-    font-size: 14px;
-    line-height: 1.5;
-    color: #60646B;
+    .slide-image {
+      max-height: 50%;
+      max-width: 60%;
+      margin: 18px 0;
+      padding : 1px;
+    }
 
     b {
-      color: #000000;
+      font-weight: 500;
     }
+
+    p {
+      padding: 0 40px;
+      font-size: 14px;
+      line-height: 1.5;
+      color: #60646B;
+
+      b {
+        color: #000000;
+        margin:5px;
+      }
+    }
+
   }
+
 
 }
